fix overflow scrollbar for discover

--- a/app/assets/stylesheets/api/discover.css.scss
+++ b/app/assets/stylesheets/api/discover.css.scss
@@ -16,3 +16,6 @@
   width: 72%;
   border-right: 1px solid $border;
 }
+  .discover-main-buffer{
+    height: 5rem;
+  }
